# youtube-trend-dashboard

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
data/: category_code.json  country_code.json  slang.txt
src/: controller.py  controller_chart.py  controller_refactor.py  country_code.py  loading.py  main.py  main_refactor.py  model.py  model_refactor.py  page_config.py  sentiment_analysis.py  view.py  view_refactor.py
src/config/: analysis_options.py  country_code.py  page_config.py
src/controllers/: controller.py
src/models/: model.py
src/utils/: loading.py
src/views/: view.py
